k8s/20-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forever-frontend
  namespace: forever
  labels:
    app: forever-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forever-frontend
  template:
    metadata:
      labels:
        app: forever-frontend
    spec:
      containers:
        - name: frontend
          image: samarraghav1/forever-frontend:11
          ports:
            - containerPort: 4001
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: forever-frontend
  namespace: forever
spec:
  selector:
    app: forever-frontend
  ports:
    - port: 4001
      targetPort: 80
