k8s/40-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forever-db
  namespace: forever
  labels:
    app: forever-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forever-db
  template:
    metadata:
      labels:
        app: forever-db
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: forever-db
  namespace: forever
spec:
  selector:
    app: forever-db
  ports:
    - port: 27017
      targetPort: 27017
