k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forever-ingress
  namespace: forever
  annotations:
    kubernetes.io/ingress.class: alb   # Use AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: forever-frontend
                port:
                  number: 4001
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 4002
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
